<resources>
    <string name="app_name" translatable="false">HyperCoachInterface</string>
    <string name="title_home">Home</string>
    <string name="title_search">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Login successful"</string>
    <string name="username_desc">Username:</string>
    <string name="name_desc">Name:</string>
    <string name="profile_pic_desc">Profile picture</string>
    <string name="email_desc">Email:</string>
    <string name="gender_desc">Gender:</string>
    <string name="lastname_desc">Last name:</string>
    <string name="birth_desc">Date of birth:</string>
    <string name="logout">Log out</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="placeholder">Loading…</string>
    <string name="cardview_contents" translatable="false">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text" translatable="false">Radius</string>
    <string name="cardview_elevation_seekbar_text" translatable="false">Elevation</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="recent_routines">Recent</string>
    <string name="all_routines">All routines</string>
    <string name="my_routines">My routines</string>
    <string name="favourites_routines">Favorites</string>
    <string name="search_dialog_title">Search</string>
    <string name="order_by_text">Order by</string>
    <string name="title_routine_detail_activity">Routine detail</string>
    <string name="title_execute_routine_activity">Routine</string>
    <string name="yes_equipment">Requires equipment</string>
    <string name="no_equipment">Doesn\'t require equipment</string>
    <string-array name="order_by_options">
        <!--        TODO: add options-->
        <item>Category</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>
    <string-array name="filter_by_options">
        <!--        TODO: add categories-->
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>
    <string name="title_activity_routine_detail" translatable="false">RoutineDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="button_star_desc" translatable="false">Favourite</string>
    <string name="begin_routine_btn">Begin Routine Button</string>
    <string name="categories">Categories</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="difficulty">Difficulties</string>
    <string name="search_button_text">Filter</string>
    <string name="name_sort_criteria">Name</string>
    <string name="date_sort_criteria">Date</string>
    <string name="diff_sort_criteria">Difficulty</string>
    <string name="favs_sort_criteria">Favorite count</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="start_routine">Start</string>
    <string name="reps">Repetitions</string>
    <string name="welcome_to_hyper_coach_interface">Welcome to Hyper Coach Interface</string>
    <string name="share_text">Hey there! Check out this routine</string>
    <string name="seconds">seconds</string>
    <string name="repetitions">repetitions</string>
    <string name="bodybuilding">Body building</string>
    <string name="cardio">Cardio</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="hit">HIT</string>
    <string name="no_category">No category</string>

    <string name="code3">Request not found</string>
    <string name="code4">Invalid username or password</string>
    <string name="code_default">An unexpected error has occurred</string>
    <string name="no_connection">It seems like you have no connection. Please try again later.</string>
    <string name="retry">Retry</string>
    <string name="invalid_routine">Invalid routine</string>
    <string name="empty_list">No routines</string>
    <string name="stop_execution_warning">Stopping the routine will erase your progress so far. Are you sure?</string>
    <string name="stop_execution">Stop</string>
    <string name="continue_execution">Continue</string>
    <string name="stop_dialog_title">Stop routine</string>
    <string name="finish_execution">You finished the routine!</string>
</resources>