<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- TODO: center details vertically -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_pic_desc"
            android:layout_marginTop="32dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:backgroundTint="?attr/colorError"
            android:text="@string/logout"
            android:textColor="?attr/colorOnError"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthLayout" />

        <LinearLayout
            android:id="@+id/usernameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/usernameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/username_desc"
                android:layout_marginHorizontal="4dp"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/placeholder"
                android:textSize="24sp"
                android:layout_marginHorizontal="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

            <TextView
                android:id="@+id/nameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/name_desc"
                android:textColor="?attr/colorOnBackground"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/placeholder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastnameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLayout">

            <TextView
                android:id="@+id/lastnameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/lastname_desc"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/placeholder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastnameLayout">

            <TextView
                android:id="@+id/emailDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/email_desc"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/placeholder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genderLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">

            <TextView
                android:id="@+id/genderDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/gender_desc"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/placeholder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/birthLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderLayout">

            <TextView
                android:id="@+id/birthDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/birth_desc"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/placeholder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>