<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_category_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/categories"/>

    <HorizontalScrollView
        android:id="@+id/dialog_category_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_category_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:requiresFadingEdge="horizontal|vertical"
        android:paddingVertical="5dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/categories_chip_group"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            app:chipSpacing="5dp"
            app:singleSelection="true"/>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/dialog_difficulty_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_category_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        android:text="@string/difficulty"/>

    <HorizontalScrollView
        android:id="@+id/dialog_difficulty_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_difficulty_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:requiresFadingEdge="horizontal|vertical"
        android:paddingVertical="5dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/difficulty_chip_group"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            app:chipSpacing="5dp"
            app:singleSelection="true"/>

    </HorizontalScrollView>

    <View
        android:id="@+id/search_dialog_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_difficulty_scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/dialog_order_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_dialog_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp"
        android:text="@string/order_by_text"/>

    <HorizontalScrollView
        android:id="@+id/dialog_order_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_order_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:requiresFadingEdge="horizontal|vertical"
        android:paddingVertical="5dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/order_chip_group"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            app:chipSpacing="5dp"
            app:singleSelection="true"/>

    </HorizontalScrollView>



    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/asc_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_order_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textOn="@string/asc"
        android:textOff="@string/desc"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/desc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            style="?attr/materialButtonOutlinedStyle"
            />

        <Button
            android:id="@+id/asc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asc"
            style="?attr/materialButtonOutlinedStyle"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>