<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/my_routines_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/my_routines"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_routines_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wrapper_routine_card_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:scrollbars="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_routines_text"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/my_routines_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/my_routines_view"/>

    <TextView
        android:id="@+id/my_routines_empty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/my_routines_view"
        android:text="@string/empty_list"/>

    <TextView
        android:id="@+id/recent_routines_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_weight="1"
        android:text="@string/recent_routines"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_routines_view" />

    <ImageButton
        android:id="@+id/goto_recent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:paddingHorizontal="10dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintTop_toTopOf="@id/recent_routines_text"
        app:layout_constraintBottom_toBottomOf="@id/recent_routines_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_routines_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wrapper_routine_card_height"
        android:scrollbars="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent_routines_text"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/recent_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recent_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/recent_routines_view"/>

    <TextView
        android:id="@+id/recent_empty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recent_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/recent_routines_view"
        android:text="@string/empty_list"/>

    <TextView
        android:id="@+id/favourites_routines_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/favourites_routines"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent_routines_view" />

    <ImageButton
        android:id="@+id/goto_favorites_routines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@null"
        android:scaleType="fitCenter"
        android:paddingHorizontal="10dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favourites_routines_text"
        app:layout_constraintBottom_toBottomOf="@id/favourites_routines_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favourites_routines_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wrapper_routine_card_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:scrollbars="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_routines_text"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/favourites_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favourites_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/favourites_routines_view"/>

    <TextView
        android:id="@+id/favourites_empty_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favourites_routines_view"
        app:layout_constraintBottom_toBottomOf="@id/favourites_routines_view"
        android:text="@string/empty_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>